prevent photo thumbnails from squishing

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -50,6 +50,7 @@ td {
     aspect-ratio: 1 / 1;
     border-radius: 14px;
     background-color: lightgray;
+    object-fit: cover;
 }
 
 .subtitle {
@@ -82,7 +83,7 @@ p {
     width: 108px;
 }
 
-#map { 
+#map {
     height: 220px;
     border-radius: 14px;
     margin: 1em 0px 1em 0px;
